<resources>
<<<<<<< HEAD
    <string name="app_name">MdiDrawableDemo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
=======
    <string name="app_name">MdiDrawable Demo</string>
    <string name="action_settings">Settings</string>
    <string name="name">name</string>
    <string name="size">size</string>
    <string name="color">color</string>
    <string name="radius">radius</string>
    <string name="background">background</string>
    <string name="start_color">start color</string>
    <string name="end_color">end color</string>
>>>>>>> main
</resources>